implement local cluster identification via secret mount; improve apis for propagating auth info to plugins

--- a/packages/opni-agent/opni-agent/charts/templates/agent-config_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/agent-config_v2.yaml
@@ -19,6 +19,9 @@ stringData:
         type: customResources
       plugins:
         dir: /var/lib/opni-agent/plugins
+      keyring:
+        ephemeralKeyDirs:
+          - /run/opni-agent/keyring
       bootstrap:
         {{- if .Values.bootstrapInCluster.enabled }}
         inClusterManagementAddress: {{ .Values.bootstrapInCluster.managementAddress }}
