Switch to use otel for events

--- a/images/otel-collector/ocb-config.yaml
+++ b/images/otel-collector/ocb-config.yaml
@@ -16,6 +16,7 @@ receivers:
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/zipkinreceiver v0.71.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/journaldreceiver v0.71.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/filelogreceiver v0.71.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/k8seventsreceiver v0.71.0
 
 exporters:
   - gomod: go.opentelemetry.io/collector/exporter/loggingexporter v0.71.0
