--- a/packages/opni-agent/opni-agent/charts/Chart.yaml
+++ b/packages/opni-agent/opni-agent/charts/Chart.yaml
@@ -5,7 +5,7 @@ annotations:
   catalog.rancher.io/namespace: opni-system
   catalog.rancher.io/release-name: opni-agent
 apiVersion: v2
-appVersion: 0.8.3
+appVersion: 0.9.0-rc1
 dependencies:
 - condition: kube-prometheus-stack.enabled
   name: kube-prometheus-stack
@@ -13,4 +13,4 @@ dependencies:
 description: Opni Agent
 name: opni-agent
 type: application
-version: 0.8.3
+version: 0.9.0-rc1
