Switch default storage backend to jetstream

--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -2158,8 +2158,11 @@ spec:
                 default: LoadBalancer
                 type: string
               storageType:
-                default: etcd
+                default: jetstream
                 type: string
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               tolerations:
                 items:
                   properties:
