Expose storage type for gateway

--- a/packages/opni/opni/charts/templates/gateway.yaml
+++ b/packages/opni/opni/charts/templates/gateway.yaml
@@ -13,6 +13,9 @@ spec:
   {{- end}}
   hostname: {{ .Values.gateway.hostname }}
   serviceType: {{ .Values.gateway.serviceType }}
+  {{- if .Values.gateway.storageType }}
+  storageType: {{ .Values.gateway.storageType }}
+  {{- end }}
   natsCluster:
     name: opni
   {{- with .Values.gateway.serviceAnnotations }}
