Fix jetstream storage config reconciling

--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -2250,6 +2250,8 @@ spec:
                 type: boolean
               serviceName:
                 type: string
+              storageType:
+                type: string
             type: object
         type: object
     served: true
