Add friendly name to UI

--- a/packages/opni-agent/opni-agent/charts/questions.yaml
+++ b/packages/opni-agent/opni-agent/charts/questions.yaml
@@ -1,4 +1,7 @@
 questions:
+- variable: friendlyName
+  label: Cluster Name
+  type: string
 - variable: token
   label: Bootstrap Token
   type: string
