--- a/pkg/test/testdata/prometheus/config.yaml
+++ b/pkg/test/testdata/prometheus/config.yaml
@@ -29,7 +29,7 @@ scrape_configs:
 # When running prometheus in Agent mode, remote-write is required.
 remote_write:
   # Agent is able to run with a invalid remote-write URL, but, of course, will fail to push timeseries.
-  - url: "http://localhost:{{ .OpniAgentPort }}/api/agent/push"
+  - url: "http://{{ .OpniAgentAddress }}/api/agent/push"
     metadata_config:
       send: true
       send_interval: 10s
