otel collector : prometheus scrape target discovery

--- a/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
@@ -37,6 +37,11 @@ rules:
   verbs:
   - get
 
+# discovery permissions
+- apiGroups: ["discovery.k8s.io"]
+  resources: ["endpointslices"]
+  verbs: ["get", "list", "watch"]
+
 # client manager permissions
 - apiGroups:
   - logging.opni.io
