otel agent driver for metrics collection with otel

--- a/config/agent-crd/bases/core.opni.io_collectors.yaml
+++ b/config/agent-crd/bases/core.opni.io_collectors.yaml
@@ -47,6 +47,12 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              metricsConfig:
+                properties:
+                  name:
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
               systemNamespace:
                 type: string
             type: object
