--- a/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
@@ -29,10 +29,23 @@ rules:
   - pods/log
   verbs:
   - get
+- apiGroups:
+  - ""
+  resources:
+  - nodes
+  - nodes/stats
+  verbs:
+  - get
 
 # client manager permissions
 - apiGroups:
   - logging.opni.io
+  resources:
+  - "*"
+  verbs:
+  - "*"
+- apiGroups:
+  - monitoring.opni.io
   resources:
   - "*"
   verbs:
