--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -26,6 +26,7 @@ resources:
 - bases/core.opni.io_gateways.yaml
 - bases/core.opni.io_loggingclusters.yaml
 - bases/core.opni.io_monitoringclusters.yaml
+- bases/core.opni.io_alertingclusters.yaml
 - bases/core.opni.io_natsclusters.yaml
 #- bases/core.opni.io_collectors.yaml
 - bases/logging.opni.io_datapreppers.yaml
