--- a/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- if or (eq .Values.agent.version "v1") .Values.logging.enabled }}
+{{- $minimalVersionTag := printf "v%s-minimal" .Chart.AppVersion }}
 {{- $versionTag := printf "v%s" .Chart.AppVersion }}
 apiVersion: apps/v1
 kind: Deployment
@@ -8,7 +8,8 @@ metadata:
   labels:
     {{- include "opni-agent.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       {{- include "opni-agent.selectorLabels" . | nindent 6 }}
@@ -32,37 +33,30 @@ spec:
         - name: agent
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default $versionTag }}"
+          image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default $minimalVersionTag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - agent
-          {{- if .Values.metrics.enabled }}
-            - --metrics
-          {{- end }}
-          {{- if .Values.logging.enabled }}
-            - --logging
-          {{- if .Values.events.enabled }}
-            - --events
-          {{- end }}
-          {{- end }}
+            - agentv2
           ports:
             - name: http
-              containerPort: {{ .Values.metrics.enabled | ternary "8080" "8081" }}
+              containerPort: 8080
               protocol: TCP
           env:
             - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+          {{- if .Values.disableUsage }}
+            - name: DO_NOT_TRACK
+              value: "1"
+          {{- end }}
           volumeMounts:
-          {{- if .Values.metrics.enabled }}
             - name: config
               mountPath: /etc/opni
-          {{- end }}
-          {{- if .Values.logging.enabled }}
-            - mountPath: /tmp/k8s-webhook-server/serving-certs
-              name: cert
-              readOnly: true
+            - name: plugins
+              mountPath: /var/lib/opni-agent/plugins
+          {{- if .Values.volumeMounts }}
+            {{- toYaml .Values.volumeMounts | nindent 12 }}
           {{- end }}
           livenessProbe:
             httpGet:
@@ -93,6 +87,57 @@ spec:
             failureThreshold: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        - name: client
+          args:
+          - client
+          - --health-probe-bind-address=:7081
+          - --metrics-bind-address=127.0.0.1:7080
+          {{- if .Values.bootstrapInCluster.enabled }}
+          - --central
+          {{- end }}
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          - name: OPERATOR_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          - name: NODE_FEATURE_DISCOVERY_IMAGE
+            value: k8s.gcr.io/nfd/node-feature-discovery:v0.7.0
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag | default $versionTag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 7081
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: 7081
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+        - name: kube-rbac-proxy
+          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.5.0
+          args:
+            - --secure-listen-address=0.0.0.0:8443
+            - --upstream=http://127.0.0.1:7080/
+            - --logtostderr=true
+            - --v=10
+          ports:
+            - containerPort: 8443
+              name: https
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -106,7 +151,6 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-      {{- if .Values.metrics.enabled }}
         - name: config
           secret:
             secretName: agent-config
@@ -114,11 +158,10 @@ spec:
               - key: config.yaml
                 path: config.yaml
             defaultMode: 256
+        - name: plugins
+          hostPath:
+            path: {{ default "/var/lib/opni/plugins" .Values.persistence.hostDirectoryPath }}
+            type: DirectoryOrCreate
+      {{- if .Values.volumes }}
+        {{- toYaml .Values.volumes | nindent 8 }}
       {{- end }}
-      {{- if .Values.logging.enabled }}
-        - name: cert
-          secret:
-            defaultMode: 420
-            secretName: webhook-server-cert
-    {{- end }}
-{{- end }}
