Create gateway upgrade image resolver

--- a/config/crd/bases/core.opni.io_gateways.yaml
+++ b/config/crd/bases/core.opni.io_gateways.yaml
@@ -392,6 +392,8 @@ spec:
                         type: array
                     type: object
                 type: object
+              agentImageTagOverride:
+                type: string
               alerting:
                 properties:
                   alertVolumeMounts:
