--- a/config/crd/bases/monitoring.opni.io_collectorconfigs.yaml
+++ b/config/crd/bases/monitoring.opni.io_collectorconfigs.yaml
@@ -63,6 +63,11 @@ spec:
                     type: object
                 type: object
               prometheusDiscovery:
+                properties:
+                  namespaceSelector:
+                    items:
+                      type: string
+                    type: array
                 type: object
               remoteWriteEndpoint:
                 type: string
