Add one time use bootstrap tokens

--- a/config/crd/bases/core.opni.io_bootstraptokens.yaml
+++ b/config/crd/bases/core.opni.io_bootstraptokens.yaml
@@ -48,6 +48,8 @@ spec:
                   leaseID:
                     format: int64
                     type: integer
+                  onetime:
+                    type: boolean
                   resourceVersion:
                     type: string
                   ttl:
