--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "marked": "^4.3.0",
     "unique-names-generator": "^4.7.1",
     "vue-chartjs": "^4.1.1",
-    "vue-fragment": "^1.6.0"
+    "vue-fragment": "^1.6.0",
+    "dayjs": "^1.8.16"
   },
   "resolutions": {
     "**/webpack": "4",
