Add flag completion funcs for enums

--- a/config/crd/bases/core.opni.io_monitoringclusters.yaml
+++ b/config/crd/bases/core.opni.io_monitoringclusters.yaml
@@ -185,7 +185,8 @@ spec:
                             type: string
                         type: object
                       backend:
-                        type: string
+                        format: int32
+                        type: integer
                       filesystem:
                         properties:
                           directory:
