--- a/config/crd/bases/monitoring.opni.io_collectorconfigs.yaml
+++ b/config/crd/bases/monitoring.opni.io_collectorconfigs.yaml
@@ -44,6 +44,8 @@ spec:
                     type: array
                   hostMetrics:
                     type: boolean
+                  useOTLP:
+                    type: boolean
                   wal:
                     properties:
                       bufferSize:
