Fix storage spec enum crd

--- a/config/crd/bases/core.opni.io_alertingclusters.yaml
+++ b/config/crd/bases/core.opni.io_alertingclusters.yaml
@@ -29,6 +29,8 @@ spec:
             properties:
               alertmanager:
                 properties:
+                  deployConf:
+                    type: string
                   enable:
                     type: boolean
                   image:
