--- a/config/crd/bases/core.opni.io_monitoringclusters.yaml
+++ b/config/crd/bases/core.opni.io_monitoringclusters.yaml
@@ -185,8 +185,7 @@ spec:
                             type: string
                         type: object
                       backend:
-                        format: int32
-                        type: integer
+                        type: string
                       filesystem:
                         properties:
                           directory:
